# vg5000-with-z88dk

./: .gitignore  CMakeLists.txt  Makefile  README.md  z88dk-clion.yaml  z88dk-vg5000.cmake
src/: auxiliary.asm  main.c  notes.txt
